--- a/src/app/features/admin/bison/bison.html
+++ b/src/app/features/admin/bison/bison.html
@@ -19,7 +19,7 @@
   <div class="p-6 bg-white rounded-lg shadow-md">
     <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-4">
       <div class="relative">
-        <lucide-icon [img]="Search" class="absolute left-3 top-1/2 -translate-y-1/2 h-4 w-4 text-gray-400"></lucide-icon>
+        <lucide-icon [img]="Search" class="absolute left-2 top-1/2 transform -translate-y-1/2 h-4 w-4 text-gray-400"></lucide-icon>
         <input
           placeholder="Buscar bisonte o cuidador..."
           [value]="searchTerm()"
