--- a/src/app/features/admin/caretaker/caretaker.html
+++ b/src/app/features/admin/caretaker/caretaker.html
@@ -18,7 +18,7 @@
   <div class="border rounded-lg p-6">
     <div class="grid md:grid-cols-4 gap-4">
       <div class="relative">
-        <lucide-icon [img]="Search" class="absolute left-3 top-3 h-4 w-4 text-gray-400"></lucide-icon>
+        <lucide-icon [img]="Search" class="absolute left-2 top-1/2 transform -translate-y-1/2 h-4 w-4 text-gray-400"></lucide-icon>
         <input
           placeholder="Buscar cuidadores..."
           [(ngModel)]="searchTerm"
