--- a/src/app/features/home/home.html
+++ b/src/app/features/home/home.html
@@ -18,10 +18,10 @@
           Nuestros Bisontes
         </a>
         <a routerLink="/login" class="text-gray-600 hover:text-blue-600 transition-colors">
-          Login
+          Iniciar sesión
         </a>
         <a routerLink="/register">
-          <app-button label="Registrase" type="primary"></app-button>
+          <app-button label="Registrarse" type="primary"></app-button>
         </a>
       </nav>
     </div>
