--- a/src/app/features/home/home.html
+++ b/src/app/features/home/home.html
@@ -175,7 +175,7 @@
         </div>
       </div>
       <div class="border-t border-gray-700 mt-8 pt-8 text-center text-gray-400">
-        <p>&copy; 2024 Acarreos Appa. Reservados todos los derechos. Yip yip!</p>
+        <p>&copy; 2025 Acarreos Appa. Reservados todos los derechos. Excepto para Chanci, TKM ❤️</p>
       </div>
     </div>
   </footer>
