--- a/src/app/features/login/login.html
+++ b/src/app/features/login/login.html
@@ -42,9 +42,14 @@
             }
           </div>
 
-          <button type="submit"
+          <button (click)="goToHome()" type="submit"
             class="w-full py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
             Inicia sesión
+          </button>
+
+          <!-- boton de ir a admin -->
+          <button (click)="goToAdmin()" class="w-full py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
+            Ir a Admin
           </button>
         </form>
 
