--- a/src/app/features/tracking/tracking.html
+++ b/src/app/features/tracking/tracking.html
@@ -35,7 +35,7 @@
             @if (isLoading()) {
               <span>Rastreando...</span>
             } @else {
-              <span>Orden rastreada</span>
+              <span>Rastrear ordén</span>
             }
           </button>
         </form>
